force-app/main/default/objects/Security_Health_Check_Task__c.object
<CustomObject>
    <description>Used to assign Tasks to improve Security Health Check Risk values.</description>
    <fields>
        <fullName>Assigned_Name__c</fullName>
        <formula>Assigned_To__r.FirstName &amp; &quot; &quot;&amp;  Assigned_To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Security_Health_Check_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the task being created</description>
        <inlineHelpText>The instructions for the user that the task is assigned to</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_To_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Org</label>
        <referenceTo>Security_Health_Check_Org__c</referenceTo>
        <relationshipLabel>Security Health Check Tasks</relationshipLabel>
        <relationshipName>Security_Health_Check_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_To_Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To Risk</label>
        <referenceTo>Security_Health_Check_Risk__c</referenceTo>
        <relationshipLabel>Security Health Check Tasks</relationshipLabel>
        <relationshipName>Security_Health_Check_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <inlineHelpText>How did you solve this problem?</inlineHelpText>
        <label>Resolution</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Security_Health_Check_Task_Severity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Security_Health_Check_Task_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Security Health Check Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SECTASK-{0000}</displayFormat>
        <label>Security Health Check Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Health Check Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>